Agregacion de proctos mas vendidos y modificaciones de los apartados

--- a/estatesale-starter_Free28-10-2020_1078274379/starter/assets/css/style-starter.css
+++ b/estatesale-starter_Free28-10-2020_1078274379/starter/assets/css/style-starter.css
@@ -10403,7 +10403,7 @@ nav ul li a:hover {
   opacity: 0.95; }
 
 .w3l-cover-3 .top-bottom {
-  background: url(../images/banner.jpg) no-repeat center center;
+  background: url(../images/Fondo.jpg) no-repeat center center;
   background-size: cover;
   min-height: 750px;
   position: relative;
