--- a/app-TiendaEnLinea/src/main/resources/velocity/index.vm
+++ b/app-TiendaEnLinea/src/main/resources/velocity/index.vm
@@ -43,7 +43,7 @@ Author URL: http://w3layouts.com
                   <li class="nav-item active">
                       <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
                   </li>
-                      #if($UsuarioActual=="cesar@gmail.com")
+                      #if($UsuarioActual=="admin@gmail.com")
                       <li class="nav-item dropdown @@pages__active">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
